--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -201,55 +201,26 @@ jobs:
       - name: Deploy Function App em Python (sem App Insights)
         uses: azure/cli@v1
         with:
-          inlineScript: |
-            RG="MiniProjetoCloud2.0"
-            DEPLOY_NAME="deploy-funcapp-$(date +%s)"
-            FUNC_NAME="$FUNCTIONAPP_NAME"
-            STORAGE_ACCOUNT_NAME="miniprojetostorage20"
-
-            echo "Deploy Function App ($FUNC_NAME) sem App Insights..."
-            az deployment group create \
-              --name "$DEPLOY_NAME" \
-              --resource-group "$RG" \
-              --template-file templates/function-app.bicep \
-              --parameters \
-                functionAppName="$FUNC_NAME" \
-                storageAccountName="$STORAGE_ACCOUNT_NAME" \
-              --only-show-errors
-
-            echo "Function App deploy concluído: $DEPLOY_NAME"
-
-
-
-            - name: Atribuir role ao Web App sobre Storage (opcional)
-              uses: azure/cli@v1
-              with:
                 inlineScript: |
                   RG="MiniProjetoCloud2.0"
-                  WEBAPP_NAME="minhaapp-rodrig0salv"
-                  STORAGE_NAME="miniprojetostorage20"
-                  PRINCIPAL_ID=$(az webapp show --resource-group "$RG" --name "$WEBAPP_NAME" --query identity.principalId -o tsv)
-                  if [ -n "$PRINCIPAL_ID" ] && [ "$PRINCIPAL_ID" != "null" ]; then
-                    STORAGE_SCOPE=$(az storage account show --name "$STORAGE_NAME" --resource-group "$RG" --query id -o tsv)
-                    az role assignment create --assignee-object-id "$PRINCIPAL_ID" --role "Storage Blob Data Contributor" --scope "$STORAGE_SCOPE" || echo "Role já atribuída ou falha."
-                  else
-                    echo "Web App não tem identidade configurada ou não existe."
-                  fi
+                  DEPLOY_NAME="deploy-funcapp-$(date +%s)"
+                  FUNC_NAME="${{ env.FUNCTIONAPP_NAME }}"
+                  STORAGE_ACCOUNT_NAME="miniprojetostorage20"
+                  LOCATION="francecentral"
 
-            - name: Atribuir role ao Function App sobre Storage (opcional)
-              uses: azure/cli@v1
-              with:
-                inlineScript: |
-                  RG="MiniProjetoCloud2.0"
-                  FUNC_NAME="$FUNCTIONAPP_NAME"
-                  STORAGE_NAME="miniprojetostorage20"
-                  PRINCIPAL_ID=$(az functionapp show --resource-group "$RG" --name "$FUNC_NAME" --query identity.principalId -o tsv)
-                  if [ -n "$PRINCIPAL_ID" ] && [ "$PRINCIPAL_ID" != "null" ]; then
-                    STORAGE_SCOPE=$(az storage account show --name "$STORAGE_NAME" --resource-group "$RG" --query id -o tsv)
-                    az role assignment create --assignee-object-id "$PRINCIPAL_ID" --role "Storage Blob Data Contributor" --scope "$STORAGE_SCOPE" || echo "Role já atribuída ou falha."
-                  else
-                    echo "Function App não tem identidade configurada ou não existe."
-                  fi
+                  echo "Deploy Function App ($FUNC_NAME) sem App Insights..."
+                  az deployment group create \
+                    --name "$DEPLOY_NAME" \
+                    --resource-group "$RG" \
+                    --template-file templates/function-app.bicep \
+                    --parameters \
+                      functionAppName="$FUNC_NAME" \
+                      storageAccountName="$STORAGE_ACCOUNT_NAME" \
+                      location="$LOCATION" \
+                      existingPlanResourceId='' \
+                    --only-show-errors
+
+                  echo "Function App deploy concluído: $DEPLOY_NAME"
 
       - name: Mostrar outputs finais Web + Function
         uses: azure/cli@v1
